syntax = "proto3";

package darc;

message Expression {
    repeated string matches = 1;
}

message AccessProto {
    map<string, Expression> rules = 1;
}

message ActionProto {
    bytes key = 1;
    AccessProto access = 2;
}
